oasis-build/tests/ui/non_rpc_type.stderr
error: `alloc::boxed::Box` cannot be converted to an RPC type
 --> $DIR/non_rpc_type.rs:7:5
  |
7 | /     pub fn new(ctx: &Context, start_count: Box<u32>) -> Result<Self, ()> {
8 | |         unimplemented!();
9 | |     }
  | |_____^

error: aborting due to previous error

